--- a/assets/css/homeStyle.css
+++ b/assets/css/homeStyle.css
@@ -27,7 +27,7 @@ html{
 
 /*bodyBottom style*/
 #bodyBottom{
-  padding-bottom: 7vh;
+  padding-bottom: 10vh;
   background-color: #333;
   border-top: 10px solid #004cc3;
 }
@@ -49,7 +49,7 @@ html{
 /*gameBox style*/
 .gameBox{ 
   width: 25%;
-  height: 20vh;
+  height: 25vh;
   margin: 1%;
   border-radius: 10px;
   box-shadow: 8px 8px rgba(0,0,0,.30);
@@ -58,32 +58,46 @@ html{
 .gameBox a{
   display: block;
   height: 100%;
-  outline: 0;
 }
 
 #csgoBox{
-  background: url("http://media.steampowered.com/apps/csgo/blog/images/fb_image.png?v=5");
+  background: url("/assets/images/home/csgoBox.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 #lolBox{
-  background: url("http://media.comicbook.com/2017/06/background-1002091.jpg");
+  background: url("/assets/images/home/lolBox.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 #pubgBox{
-  background: url("https://res.cloudinary.com/lmn/image/upload/c_limit,h_360,w_640/e_sharpen:100/f_auto,fl_lossy,q_auto/v1/gameskinnyc/p/u/b/pubg-6efcd.jpg");
+  background: url("/assets/images/home/pubgBox.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 #fortniteBox{
-  background: url("https://media.playstation.com/is/image/SCEA/fortnite-listing-thumb-01-ps4-us-24may17?$Icon$");
+  background: url("/assets/images/home/fortniteBox.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/*Other Chats*/
+#generalBox{
+  background: url("/assets/images/home/generalBox.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#rolePlayBox{
+  background: url("/assets/images/home/rollplayBox.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
