--- a/assets/css/baseStyle.css
+++ b/assets/css/baseStyle.css
@@ -1,15 +1,18 @@
 /*UNIVERSIAL BASE STYLE FOR ALL PAGES*/
 /*Body Style*/
-strong{
-  color: #004cc3;  
-}
 a{
   outline: 0;
 }
 
-.btn{
+.btn {
+  color: rgba(255, 255, 255, 0.8);
   background: #004cc3;
-  color: #fff;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn:hover {
+  color: rgba(255, 255, 255, 1);
+  box-shadow: 0 0px 15px rgba(255, 255, 255, .8);
 }
 
 /*Usefull Classes*/
@@ -46,4 +49,5 @@ a{
     margin:0 auto;
   }
 }
+
 
