--- a/assets/css/chatBaseStyle.css
+++ b/assets/css/chatBaseStyle.css
@@ -2,14 +2,18 @@
 /*Base page setup*/
 html, body{
     height: 100vh;
+    overflow: hidden;
 }
 ul#messages > li.pending{
     display: none;
 }
 
-
 #bodyContainer,#chatWrapper{
     max-height: 90vh;
+}
+
+#bodyContainer{
+    padding: 0;
 }
 
 body{
@@ -25,22 +29,44 @@ input{
     border: 2px solid #004cc3;
 }
 
+.titleWrapper{
+    font-weight: bolder;
+    text-transform: uppercase;
+    width: 80%;
+    padding-top: 3%;
+    padding-bottom: 1%;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius:360px;
+    color: #fff;
+    border-bottom: 4px solid #004cc3;
+}
+
+.titleWrapper *{
+    text-align: center;
+}
+
+/*Other Chats Setup*/
+#otherChatsWrapper{
+    background-color: #111;
+    height: 93vh;
+    border-right: 4px solid #004cc3;
+}
+
+#chatHolder{
+    max-height: 93%;
+    overflow: hidden;
+    overflow-clip: auto;
+}
+
 /*Chat setup*/
 #chatWrapper{
-    background: rgba(0,0,0,.55);
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5vh;
-    height:75vh;
     color: white;
-    padding: 2%;
-    box-shadow: 15px 10px rgba(0,0,0,.30);
-    border-radius: 10px;
+    height: 100vh;
 }
 
 #chatWrapper h1{
-    padding-bottom: 2%;
+    padding-top: 1%;
     text-align: center;
     text-transform: uppercase;
 }
@@ -48,7 +74,7 @@ input{
 ul#messages {
     background: #111;
     color: #e5e5e5;
-    height: 70%;
+    height: 80%;
     overflow: auto;
     padding: 0 3px;
     border: 2px solid #004cc3;
@@ -80,12 +106,20 @@ ul#messages li.pending {
     position: absolute;
     top: 0;
     right: 0.5em;
-    bottom: 0px;
+    bottom: 0;
 }
 
 #messageBox input{
     width: 100%;
     margin-bottom: 1%;
+}
+
+
+/*Online Users Setup*/
+#onlineUsers{
+    background-color: #111;
+    max-height: 93%;
+    border-left: 4px solid #004cc3;
 }
 
 ::-webkit-scrollbar {
