--- a/assets/css/homeStyle.css
+++ b/assets/css/homeStyle.css
@@ -8,23 +8,21 @@ html{
 }
 
 #bodyTop{
-  padding: 3%;
-  background: url("/assets/images/home/headerImage.jpg");
-  background-repeat: no-repeat;
-  background-size:cover;
-  padding-top:0;
+    background: url("/assets/images/home/headerImage.jpg");
+    background-repeat: no-repeat;
+    background-size:cover;
+    padding: 0 3% 3%;
 }
 
 #bodyTopContent{
-  background: rgba(0,0,0,.55);
-  color: white;
-  padding: 2%;
-  padding-top: 5%;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  box-shadow: 15px 10px rgba(0,0,0,.30);
-  border-radius: 10px;
+    background: rgba(0,0,0,.55);
+    color: white;
+    padding: 5% 2% 2%;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 15px 10px rgba(0,0,0,.30);
+    border-radius: 10px;
 }
 
 #bodyTopContent p{
